# surreal-codegen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  clippy.toml
.github/workflows/: publish.yaml
surreal-codegen/: Cargo.toml  cli.js  package.json
surreal-codegen/npm/: index.js  install.js  package.json
surreal-codegen/src/: main.rs
surreal_type_generator/: Cargo.toml
surreal_type_generator/src/: lib.rs
surreal_type_generator/src/step_1_parse_sql/: global_parameters.rs  mod.rs  query.rs  schema.rs
surreal_type_generator/src/step_2_interpret/: function.rs  mod.rs  object.rs  return_types.rs  utils.rs
surreal_type_generator/src/step_3_codegen/: mod.rs
surreal_type_generator/src/utils/: mod.rs  printing.rs
surreal_type_generator/tests/: casting_javascript.rs  complex_query.rs  constant_expression_tests.rs  create_statement_tests.rs  delete_statement_tests.rs  field_defaults.rs  functions.rs  insert_statement_tests.rs  let_statement_tests.rs  literals.rs  literals_tests.rs  object.rs  precomputed_views.rs  return_and_expressions.rs  schema_complex_types.rs  select_grouping.rs  select_statement_tests.rs  select_statements_tests.rs  subquery_tests.rs  transaction.rs  typescript_generation.rs  update_statement_tests.rs  upsert_statement_tests.rs  variable_usage_tests.rs
type_generator/: Cargo.toml
type_generator/src/: lib.rs
type_generator/src/step_1_parse_sql/: global_parameters.rs  mod.rs  query.rs  schema.rs
type_generator/src/step_2_interpret/: function.rs  mod.rs  object.rs  return_types.rs  utils.rs
type_generator/tests/: casting_javascript.rs  complex_query.rs  constant_expression_tests.rs  create_statement_tests.rs  delete_statement_tests.rs  field_defaults.rs  functions.rs  insert_statement_tests.rs  nested_schema_object.rs  object.rs  precomputed_views.rs  return_and_expressions.rs  return_types.rs  schema_complex_types.rs  select_grouping.rs  select_statements_tests.rs  subquery_tests.rs  typescript_generation.rs  update_statement_tests.rs  value_query_typescript.rs  variable_usage_tests.rs
(+34 files in other folders)
