[package]
name = "surreal-codegen"
version = "0.2.0"
edition = "2021"

[dependencies]
surreal_type_generator = { path = "../surreal_type_generator", version = "0.1.0" }
anyhow = "1.0.66"
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
semver = "1.0"
toml = "0.5"
reqwest = { version = "0.12.8", features = [
    "json",
    "rustls-tls",
    "blocking",
    "rustls-tls-webpki-roots",
] }
