[package]
name = "type_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
# surrealdb = { version = "2.0.1", features = ["kv-mem"] }
# wait for https://github.com/surrealdb/surrealdb/pull/4861
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", rev = "76acd0015d17fdcfe95f2486a79d4326568be180" }
anyhow = "1.0.83"
serde_json = "1.0.117"

# add pretty assertions but only for tests
[dev-dependencies]
pretty_assertions_sorted = "1.2.3"
